plugins {
    id 'java'
}

group = 'cc.happyareabean.swmhook.provider'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    mavenLocal()

    maven { url = "https://repo.codemc.io/repository/nms/" }
    maven { url = "https://repo.fantasyrealms.net/other-libraries" }
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

subprojects {
    repositories {
        mavenCentral()
        mavenLocal()

        maven { url = "https://jitpack.io" }
        maven { url = "https://repo.codemc.io/repository/nms/" }
        maven { url = "https://repo.fantasyrealms.net/other-libraries" }
    }
    java {
        sourceCompatibility = JavaVersion.VERSION_1_8
        targetCompatibility = JavaVersion.VERSION_1_8
    }
}

test {
    useJUnitPlatform()
}

tasks.register('copyJar', Copy) {
    dependsOn tasks.build
    from rootProject.subprojects.collect { project ->
        project.file("${project.buildDir}/libs")
    }
    into "${rootProject.projectDir}/target"
    eachFile { fileDetails ->
        // exclude non-JAR files
        if (!fileDetails.name.endsWith('.jar')) {
            fileDetails.exclude()
        }
    }
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

tasks.register('cleanTarget', Delete) {
    delete "${rootProject.projectDir}/target"
}